# website

./: README.md  index.html  pyproject.toml  update_gallery.py  update_slate.py
.github/workflows/: deploy.yml
assets/css/: main.css
assets/js/: main.js
